# ImageProcessing

./: .gitignore  CMakeLists.txt  Code_Notes.md  README.md  flowchart.drawio  legacycode.md  main.cpp  notes.md  processing.cpp  processing.h  threshold.cpp
For_fun/: threshold.hpp
Surface_Fitting_image/colorplane/: test.bmp.sb-5c5580e0-ENg2NJ
legacy/: legacycode.md  legacycpp.md  legacyh.md  legacyplanefit.md
